--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "chart.js": "^4.2.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "framer-motion": "^10.11.2",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
