pass project to typescript

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -24,7 +24,6 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
     "react-select": "^5.7.2",
     "react-table": "^7.8.0",
